Tiering: the tag walk's failure lever is the token span, not the LIMIT
The incremental tag scan halved its page LIMIT on consecutive failures. That
shrinks the answer, never the work: a DISTINCT page pays to prove every
partition it walks past dead or alive, LIMIT counts only the live ones it
returns, and the partitions the re-encoder has emptied -- a wall of range
tombstones each -- are precisely the expensive ones to walk. Observed on
pp.tm_asset_data_based_second (2026-08-29): the walk at cursor null failed at
pages 256, 128 and 64 alike, the cursor never advanced past a failure, and
new-tag discovery stalled permanently while known tags kept encoding fine.

Failures now halve the TOKEN SPAN of the next page instead, computed by
boundedScanUpper as the token 1/2^failures of the way from the cursor to the
ring's end. Halving the span halves the walk -- and it turns an empty page into
progress: a bounded stretch that scans short or empty is ground covered, so the
cursor advances to the span's end and the walk resumes at full width within the
same cycle's page budget. A stretch too expensive at any width is stepped over
after finitely many halvings instead of stalling the walk forever. A full page
still advances only to its last row's token, bounded span or not, because the
ground beyond it was not scanned.

The common case pays nothing: with no failures the query, the cursor rules and
the exhaustion condition are exactly what they were, and a partitioner that
cannot split token ranges (no splitter) keeps the original LIMIT-only behaviour
throughout. The span arithmetic is pinned by a unit test against Murmur3
directly: unbounded at zero failures, strictly shrinking per failure, anchored
at the cursor, capped at 2^-20 of the ring, and null for ByteOrdered.

TieredStorageServiceTest 24/24, TieredStorageColumnsTest 44/44,
TieringSchemaSupportTest 18/18, checkstyle clean.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude